# python_deep_dive_pt_1

./: README.md  pyproject.toml
7_ClosuresAndDecorators/: closures_1.py  closures_2.py
